// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DoDontList DoDontList.Item matches snapshot: DoDontList.Item 1`] = `
<li>
  <Tick />
  Text
</li>
`;

exports[`DoDontList matches snapshot: DoDontList-Do 1`] = `
<div
  className="nhsuk-do-dont-list"
>
  <HeadingLevel
    className="nhsuk-do-dont-list__label"
    headingLevel="h3"
  >
    Do
  </HeadingLevel>
  <ul
    className="nhsuk-list nhsuk-list--tick"
  >
    <ContextProvider
      value="do"
    />
  </ul>
</div>
`;

exports[`DoDontList matches snapshot: DoDontList-Dont 1`] = `
<div
  className="nhsuk-do-dont-list"
>
  <HeadingLevel
    className="nhsuk-do-dont-list__label"
    headingLevel="h3"
  >
    Don't
  </HeadingLevel>
  <ul
    className="nhsuk-list nhsuk-list--cross"
  >
    <ContextProvider
      value="dont"
    />
  </ul>
</div>
`;
